[package]
name = "ckb-librocksdb-sys"
version = "9.10.1"
edition = "2024"
authors = ["Karl Hobley <karlhobley10@gmail.com>", "Arkadiy Paronyan <arkadiy@ethcore.io>", "Nervos Core Dev <dev@nervos.org>"]
license = "MIT/Apache-2.0/BSD-3-Clause"
description = "Native bindings to librocksdb"
readme = "README.md"
repository = "https://github.com/nervosnetwork/rust-rocksdb"
keywords = [ "ffi", "rocksdb" ]

build = "build.rs"
links = "rocksdb"

exclude = [
    ".gitignore",
    "*.yml",
    "snappy/testdata",
    "*/doc",
    "*/docs",
    "*/examples",
    "*/tests",
    "tests",
    "*.md",
]

[features]
default = [ "static" ]
portable = []
march-native = []
jemalloc = []
io-uring = []
static = []
snappy = []
lz4 = []
zstd = []
zlib = []
bzip2 = []


[dependencies]
libc = "0.2"
pkg-config = "0.3"

[dev-dependencies]
const-cstr = "0.3"
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
bindgen = { version = "0.71.1", default-features = false }
glob = "0.3.2"
pkg-config = "0.3"
rust-ini = "0.21"
